--- a/css/app.css
+++ b/css/app.css
@@ -1,346 +1,39 @@
 body {
-    background: black;
-    overflow-x: hidden;
-}
-.clearfix:before,
-.clearfix:after {
-    content: "";
-    display: table;
-}
-.clearfix:after {
-    clear: both;
-}
-.clearfix {
-    *zoom: 1;
+    background-image: url(../img/coffee-twitter-background.jpg);
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .container {
     width: 100%;
     height: auto;
     margin: 0 auto;
-    /*
-        clear: both;
-         position: relative;
-*/
 }
 
 /*********
 ******Background image
 in header*********/
 
-.imagebg {
-    background-image: url(../img/Bethbg.jpg);
-    width: 100%;
-    height: 600px;
-    background-size: cover;
-}
-
-/*
-    .imagebg:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
-        opacity: .6;
-    }
-*/
-
-
-/*    Setting the navigation bar to be responsive */
-
-@media only screen and (min-width: 1200px) {
-    .container {
-        width: 1210px;
-    }
-}
-@media only screen and (min-width: 960px) and (max-width: 1199px) {
-    .container {
-        width: 1030px;
-    }
-}
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-    .container {
-        width: 682px;
-    }
-}
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .container {
-        width: 428px;
-        margin: 0 auto;
-    }
-}
-@media only screen and (max-width: 479px) {
-    .container {
-        width: 320px;
-        margin: 0 auto;
-    }
-}
-
-/*End -responsiveness settings*/
-
-.mcd-menu {
-    list-style: none;
-    padding: 0;
-    margin: o;
-    background: black;
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    width: 250px;
-    position: relative;
-}
-.mcd-menu li a {
-    display: block;
-    text-decoration: none;
-    padding: 15px 25px;
-    color: snow;
-    text-align: left;
-    height: 40px;
-    position: relative;
-    border-bottom: 1px solid #EEE;
-}
-.mcd-menu li a i {
-    float: left;
-    font-size: 25px;
-    margin: 0 10px 0 0;
-}
-.mcd-menu li a p {
-    float: left;
-    margin: 0;
-}
-.mcd-menu li a strong {
-    display: block;
-    text-transform: uppercase;
-}
-.mcd-menu li a strong,
-.mcd-menu li a i {
-    position: relative;
-    transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -webkit-transition: all 300ms linear;
-}
-.mcd-menu li:hover a strong {
-    opacity: 1;
-    -webkit-animation: moveFromLeft 300ms ease-in-out;
-    -moz-animation: moveFromLeft 300ms ease-in-out;
-    -ms-animation: moveFromLeft 300ms ease-in-out;
-    -o-animation: moveFromLeft 300ms ease-in-out;
-    animation: moveFromLeft 300ms ease-in-out;
-}
-.mcd-menu li:hover > a {
-    color: #e67e22;
-}
-.mcd-menu li a.active {
-    position: relative;
-    color: #e67e22;
-    border: 0;
-    box-shadow: 0 0 5px #DDD;
-    -moz-box-shadow: 0 0 5px #DDD;
-    -webkit-box-shadow: 0 0 5px #DDD;
-    border-left: 4px solid #e67e22;
-    border-right: 4px solid #e67e22;
-    margin: 0 -4px;
-    /* == */
-}
-.mcd-menu li a.active:before {
-    content: "";
-    position: absolute;
-    top: 42%;
-    left: 0;
-    border-left: 5px solid #e67e22;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-}
-.mcd-menu li a.active:after {
-    content: "";
-    position: absolute;
-    top: 42%;
-    right: 0;
-    border-right: 5px solid #e67e22;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-}
-@-webkit-keyframes moveFromTop {
-    from {
-        opacity: 0;
-        -webkit-transform: translateY(200%);
-        -moz-transform: translateY(200%);
-        -ms-transform: translateY(200%);
-        -o-transform: translateY(200%);
-        transform: translateY(200%);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateY(0%);
-        -moz-transform: translateY(0%);
-        -ms-transform: translateY(0%);
-        -o-transform: translateY(0%);
-        transform: translateY(0%);
-    }
-}
-@-webkit-keyframes moveFromLeft {
-    from {
-        opacity: 0;
-        -webkit-transform: translateX(200%);
-        -moz-transform: translateX(200%);
-        -ms-transform: translateX(200%);
-        -o-transform: translateX(200%);
-        transform: translateX(200%);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateX(0%);
-        -moz-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-        -o-transform: translateX(0%);
-        transform: translateX(0%);
-    }
-}
-@-webkit-keyframes moveFromRight {
-    from {
-        opacity: 0;
-        -webkit-transform: translateX(-200%);
-        -moz-transform: translateX(-200%);
-        -ms-transform: translateX(-200%);
-        -o-transform: translateX(-200%);
-        transform: translateX(-200%);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateX(0%);
-        -moz-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-        -o-transform: translateX(0%);
-        transform: translateX(0%);
-    }
-}
-.mcd-menu li ul,
-.mcd-menu li ul li ul {
-    position: absolute;
-    height: auto;
-    min-width: 200px;
-    padding: 0;
-    margin: 0;
-    background: #FFF;
-    /*border-top: 4px solid #e67e22;*/
-    opacity: 0;
-    visibility: hidden;
-    transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -webkit-transition: all 300ms linear;
-    /*top: 130px;*/
-    z-index: 1000;
-    /* == */
-    left: 280px;
-    top: 0px;
-    border-left: 4px solid #e67e22;
-    /* == */
-}
-.mcd-menu li ul:before {
-    content: "";
-    position: absolute;
-    top: 25px;
-    left: -9px;
-    border-right: 5px solid #e67e22;
-    border-bottom: 5px solid transparent;
-    border-top: 5px solid transparent;
-    /* == */
-}
-.mcd-menu li:hover > ul,
-.mcd-menu li ul li:hover > ul {
-    display: block;
-    opacity: 1;
-    visibility: visible;
-    /*top: 100px;*/
-    /* == */
-    left: 250px;
-}
-@-webkit-keyframes moveFromLeft {
-    from {
-        opacity: 0;
-        -webkit-transform: translateX(200%);
-        -moz-transform: translateX(200%);
-        -ms-transform: translateX(200%);
-        -o-transform: translateX(200%);
-        transform: translateX(200%);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateX(0%);
-        -moz-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-        -o-transform: translateX(0%);
-        transform: translateX(0%);
-    }
-}
-@-webkit-keyframes moveFromRight {
-    from {
-        opacity: 0;
-        -webkit-transform: translateX(-200%);
-        -moz-transform: translateX(-200%);
-        -ms-transform: translateX(-200%);
-        -o-transform: translateX(-200%);
-        transform: translateX(-200%);
-    }
-    to {
-        opacity: 1;
-        -webkit-transform: translateX(0%);
-        -moz-transform: translateX(0%);
-        -ms-transform: translateX(0%);
-        -o-transform: translateX(0%);
-        transform: translateX(0%);
-    }
-}
-.mcd-menu {
-    width: 50px;
-}
-.mcd-menu li a {
-    position: relative;
-    padding: 12px 16px;
-    height: 60px;
-}
-.mcd-menu li a small {
-    display: none;
-}
-.mcd-menu li a strong {
-    display: none;
-}
-.mcd-menu li a:hover strong,
-.mcd-menu li a.active strong {
-    display: block;
-    font-size: 12px;
-    padding: 3px 0;
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    background: #e67e22;
-    color: #FFF;
-    min-width: 100%;
-    text-transform: uppercase;
-    font-weight: normal;
-    text-align: center;
-}
 
 /*The navigation bar */
 
 
 /************Placing the text-content-paper on the notepad in image ****************/
-.content_paper_name{
+
+.content_paper_name {
     font-size: 2em;
-      font-family: cursive;
+    font-family: cursive;
+    text-transform: uppercase;
 }
 .content-paper {
     -ms-transform: rotate(-9deg);
     -webkit-transform: rotate(-9deg);
     transform: rotate(-9deg);
     padding-left: 15%;
-    color: #e67e22;
+    color: snow;
     font-family: cursive;
     font-size: 1.5em;
 }
@@ -350,9 +43,8 @@ in header*********/
 .second {
     width: 100%;
     height: 400px;
-
-        background-color: #292929;
-/*    background-image: url(../img/bg%20bg.jpg);*/
+    background-color: #292929;
+    /*    background-image: url(../img/bg%20bg.jpg);*/
 }
 
 /*
@@ -526,8 +218,8 @@ img {
 .five {
     width: 100%;
     height: 300px;
-     background-color: #292929;
-/*    background-image: url(../img/bg%20bg.jpg);*/
+    background-color: #292929;
+    /*    background-image: url(../img/bg%20bg.jpg);*/
 }
 .five_col {
     height: 150px;
@@ -584,7 +276,6 @@ img {
     background-repeat: repeat;
     background-attachment: scroll;
     background-position: 0% 0%;
-
     bottom: 0pt;
     left: 0pt;
 }
