--- a/css/app.css
+++ b/css/app.css
@@ -1,16 +1,22 @@
-body {
-    background-image: url(../img/macbg.jpg);
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+body,
+html,
+.container {
+    height: 100%;
+}
+.fixed_bg {
+    min-height: 100%;
     background-size: cover;
     background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
-.container {
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
+.row.fixed_bg.bg_img_1 {
+    background-image: url(../img/macbg.jpg);
+}
+.scroll-bg {
+    min-height: 100%;
 }
 #header {
     background: #333;
@@ -63,7 +69,7 @@ a {
 }
 .img_space {
     width: 100%;
-    height: 420px;
+    height: 600px;
 }
 
 /*********
@@ -78,27 +84,47 @@ in header*********/
 
 .content_paper_name {
     width: 100%;
-    height: 420px;
+    height: 500px;
     padding-top: 10%;
-    font-size: 4em;
+    font-size: 3.5em;
     font-weight: 700;
     font-family: cursive;
     text-transform: uppercase;
     color: #e67e22;
     text-align: center;
 }
-
-/*****
-.content-paper {
-    -ms-transform: rotate(-9deg);
-    -webkit-transform: rotate(-9deg);
-    transform: rotate(-9deg);
-    padding-left: 15%;
-    color: snow;
-    font-family: cursive;
-    font-size: 1.5em;
+@import "compass/css3";
+@include keyframes(bounce) {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        @include transform(translateY(0));
+    }
+    40% {
+        @include transform(translateY(-30px));
+    }
+    60% {
+        @include transform(translateY(-15px));
+    }
 }
-******/
+.arrow {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    margin-left: -20px;
+    width: 40px;
+    height: 40px;
+    background-image: url(../img/arrows.svg);
+    background-size: contain;
+}
+.bounce {
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+}
+
+/*added the bouncing arrow using keyframes*/
 
 
 /*The second row*/
@@ -115,6 +141,8 @@ row 2 first column
             with profile picture
 */
 
+
+/*
 .aside1 {
     padding-top: 5%;
     height: 200px;
@@ -124,6 +152,9 @@ row 2 first column
 }
 #avatar {
     border: 4px solid grey;
+*/
+
+
 }
 .aside2 {
     height: 100px;
@@ -135,6 +166,7 @@ row 2 first column
 .aside3 {
     height: 100px;
     /*    background-color: snow;*/
+
     color: black;
 }
 .nav_social ul {
@@ -159,7 +191,6 @@ row 2 first column
 }
 
 /********  social media icons hover effects *****/
-
 .fa-google-plus-square:hover {
     color: #dd4b39;
 }
@@ -175,9 +206,7 @@ row 2 first column
 
 /********  End hover effects *****/
 
-
 /*second column in second row*/
-
 .col2 {
     padding-left: 40px;
 }
@@ -213,7 +242,6 @@ row 2 first column
 }
 
 /*****Row three *****/
-
 .three {
     width: 100%;
     height: 480px;
@@ -239,7 +267,6 @@ img {
 }
 
 /* row four containing blog post and stuff*/
-
 .four {
     height: 320px;
     width: 100%;
@@ -277,7 +304,6 @@ img {
 }
 
 /*row five*/
-
 .five {
     width: 100%;
     height: 300px;
@@ -319,7 +345,6 @@ img {
 }
 
 /*row form */
-
 .formset h2 {
     text-transform: uppercase;
     color: #e67e22;
@@ -348,7 +373,6 @@ img {
 }
 
 /***Blog page css stars  here ****/
-
 .blog1 {
     height: 250px;
     width: 100%;
@@ -376,7 +400,6 @@ img {
 
 /*****second row with
 heading of blog post******/
-
 .black {
     font-size: 300%;
     padding-left: 22%;
@@ -395,7 +418,6 @@ heading of blog post******/
 
 /*****third row with
 heading of blog post******/
-
 .blog3 {
     width: 100%;
     height: 700px;
