--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,9 @@ html,
 .container {
     height: 100%;
 }
+.container {
+    width: 100%;
+}
 .fixed_bg {
     min-height: 100%;
     background-size: cover;
@@ -14,9 +17,13 @@ html,
 }
 .row.fixed_bg.bg_img_1 {
     background-image: url(../img/macbg.jpg);
+    width: 100%;
 }
 .scroll-bg {
-    min-height: 100%;
+    min-height: 60%;
+}
+.navbar {
+    width: 100%;
 }
 #header {
     background: #333;
@@ -66,10 +73,6 @@ a {
 #nav li.current_page_item {
     color: #ffffff;
     text-decoration: none;
-}
-.img_space {
-    width: 100%;
-    height: 600px;
 }
 
 /*********
@@ -130,31 +133,42 @@ in header*********/
 /*The second row*/
 
 .second {
+    /*
     width: 100%;
-    height: 400px;
-    background-color: #292929;
+    height: 300px;
+*/
+    background-color: antiquewhite;
     /*    background-image: url(../img/bg%20bg.jpg);*/
 }
-
-/*
-row 2 first column
-            with profile picture
-*/
-
-
-/*
-.aside1 {
-    padding-top: 5%;
+.circle {
+    background-image: url(../img/SAM_4079.JPG);
+    display: block;
+    width: 200px;
     height: 200px;
-    padding-left: 6%;
-    color: snow;
-    font-family: 'Teko', sans-serif;
+    margin: 1em auto;
+    background-size: cover;
+    border: 5px solid #eee;
+    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-border-radius: 99em;
+    -moz-border-radius: 99em;
+    border-radius: 99em;
 }
-#avatar {
-    border: 4px solid grey;
-*/
-
-
+.about {
+/*    padding-top: 10%;*/
+    text-transform: uppercase;
+    font-family: 'Teko', sans-serif;
+    text-align: left;
+    font-size: 3em;
+    color: #e67e22;
+    text-align: center;
+}
+.text {
+    color: #292929;
+    font-size: 22px;
+    text-align: left;
+    font-family: 'Teko', sans-serif;
 }
 .aside2 {
     height: 100px;
@@ -166,7 +180,6 @@ row 2 first column
 .aside3 {
     height: 100px;
     /*    background-color: snow;*/
-
     color: black;
 }
 .nav_social ul {
@@ -191,6 +204,7 @@ row 2 first column
 }
 
 /********  social media icons hover effects *****/
+
 .fa-google-plus-square:hover {
     color: #dd4b39;
 }
@@ -206,24 +220,9 @@ row 2 first column
 
 /********  End hover effects *****/
 
+
 /*second column in second row*/
-.col2 {
-    padding-left: 40px;
-}
-.about {
-    padding-top: 8%;
-    text-transform: uppercase;
-    font-family: 'Teko', sans-serif;
-    text-align: left;
-    font-size: 30px;
-    color: #e67e22;
-}
-.text {
-    color: snow;
-    font-size: 22px;
-    text-align: left;
-    font-family: 'Teko', sans-serif;
-}
+
 .skill {
     font-family: 'Teko', sans-serif;
     color: #e67e22;
@@ -242,6 +241,7 @@ row 2 first column
 }
 
 /*****Row three *****/
+
 .three {
     width: 100%;
     height: 480px;
@@ -267,6 +267,7 @@ img {
 }
 
 /* row four containing blog post and stuff*/
+
 .four {
     height: 320px;
     width: 100%;
@@ -304,6 +305,7 @@ img {
 }
 
 /*row five*/
+
 .five {
     width: 100%;
     height: 300px;
@@ -345,6 +347,7 @@ img {
 }
 
 /*row form */
+
 .formset h2 {
     text-transform: uppercase;
     color: #e67e22;
@@ -373,6 +376,7 @@ img {
 }
 
 /***Blog page css stars  here ****/
+
 .blog1 {
     height: 250px;
     width: 100%;
@@ -400,6 +404,7 @@ img {
 
 /*****second row with
 heading of blog post******/
+
 .black {
     font-size: 300%;
     padding-left: 22%;
@@ -418,6 +423,7 @@ heading of blog post******/
 
 /*****third row with
 heading of blog post******/
+
 .blog3 {
     width: 100%;
     height: 700px;
