--- a/css/app.css
+++ b/css/app.css
@@ -20,8 +20,8 @@ html,
     width: 100%;
 }
 .row.fixed_bg.bg_img_2 {
-    background-image: url(../img/T2oGAUXFpaXXXXXXXX_!!1776056003.jpg);
-    width: 100%;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/T2oGAUXFpaXXXXXXXX_!!1776056003.jpg);
+    /*    width: 100%;*/
 }
 .scroll-bg {
     min-height: 60%;
@@ -159,7 +159,7 @@ in header*********/
     border-radius: 99em;
 }
 .about {
-    /*    padding-top: 10%;*/
+    padding-top: 2%;
     text-transform: uppercase;
     font-family: 'Teko', sans-serif;
     font-size: 3em;
@@ -171,18 +171,6 @@ in header*********/
     color: #292929;
     font-size: 1.3em;
     font-family: 'Teko', sans-serif;
-}
-.aside2 {
-    height: 100px;
-    color: chocolate;
-    padding-left: 50px;
-    color: snow;
-    font-family: 'Teko', sans-serif;
-}
-.aside3 {
-    height: 100px;
-    /*    background-color: snow;*/
-    color: black;
 }
 .nav_social ul {
     list-style-type: none;
@@ -246,7 +234,6 @@ in header*********/
 
 .three {
     width: 100%;
-    height: 480px;
     background-color: snow;
 }
 .port,
@@ -307,18 +294,11 @@ img {
 
 /*row five*/
 
-/*
-.bg_img_2.overlay {
-    color: antiquewhite;
-    opacity: .4;
-*/
-}
 .skillsetter {
     padding-top: 10%;
     text-align: center;
 }
 .skillsetter h3 {
-    padding-top: 6%;
     text-transform: uppercase;
     color: #e67e22;
     font-family: 'Teko', sans-serif;
@@ -326,6 +306,8 @@ img {
     padding-left: 30%;
     width: 100px;
 }
+
+/******************
 .inform {
     font-size: 20px;
     padding-top: 2%;
@@ -333,6 +315,9 @@ img {
     color: snow;
     font-family: 'Teko', sans-serif;
     text-align: center;
+*******/
+
+
 }
 .formcont {
     width: 100%;
@@ -346,7 +331,6 @@ img {
 }
 
 /*row form */
-
 .formset h2 {
     text-transform: uppercase;
     color: #e67e22;
@@ -375,7 +359,6 @@ img {
 }
 
 /***Blog page css stars  here ****/
-
 .blog1 {
     height: 250px;
     width: 100%;
@@ -403,7 +386,6 @@ img {
 
 /*****second row with
 heading of blog post******/
-
 .black {
     font-size: 300%;
     padding-left: 22%;
@@ -422,7 +404,6 @@ heading of blog post******/
 
 /*****third row with
 heading of blog post******/
-
 .blog3 {
     width: 100%;
     height: 700px;
