--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,15 @@ html,
 .container {
     width: 100%;
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.75);
+}
 .fixed_bg {
     min-height: 100%;
     background-size: cover;
@@ -89,7 +98,7 @@ in header*********/
 
 /************Placing the text-content-paper on the notepad in image ****************/
 
-.content_paper_name {
+.content_paper_nme {
     width: 100%;
     height: 500px;
     padding-top: 10%;
@@ -326,9 +335,154 @@ img {
 
 }
 .formcont {
+    margin-top: 10%;
     width: 100%;
-    height: 600px;
-    background-color: snow;
+    background: #181b31;
+    color: #fff;
+    font: 300 1.25em "Open Sans", sans-serif;
+    margin: 0 1em;
+    max-width: calc(100% - 7em);
+    padding: 2em calc(50% - 16em);
+}
+h2 {
+    margin: 0 0 0.25em;
+    font-size: 2em;
+    font-weight: 300;
+}
+form {
+    position: relative;
+}
+textarea {
+    resize: none;
+}
+input,
+textarea {
+    background: transparent;
+    border: 0;
+    box-sizing: border-box;
+    color: inherit;
+    margin: 0.5em 0;
+    padding: 0.5em;
+    width: 100%;
+    &:focus {
+        outline: 0;
+    }
+}
+label {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    &::before,
+    &::after {
+        border-width: 1px;
+        border-style: solid;
+        content: ' ';
+        pointer-events: none;
+        position: absolute;
+        transition: 0.75s;
+        width: 5%;
+        height: 2.25em;
+        z-index: 1;
+    }
+    &::before {
+        border-right: 0;
+    }
+    &::after {
+        border-left: 0;
+        right: 0;
+    }
+}
+.label-text {
+    background: #181b31;
+    display: block;
+    padding: 0.5em 1em;
+    position: absolute;
+    right: 0;
+    transition: 1s;
+    &::after {
+        border-top: 1px solid;
+        content: ' ';
+        display: block;
+        transition: 1s;
+    }
+}
+input:focus,
+textarea:focus {
+    
+    & + label::before,
+    & + label::after {
+        width: 50%;
+    }
+    & + label .label-text {
+        transform: translate3d(100%, 0, 0);
+    }
+    & + label .label-text::after {
+        transform: translate3d(-100%, -0.75em, 0);
+        width: 1em;
+    }
+}
+
+#n {
+    color: #09805c;
+}
+#e {
+    color: #07c83e;
+}
+#n:focus,
+label::before,
+#n:focus,
+label::after {
+    border-color: #09805c;
+}
+#e:focus,
+label::before,
+#e:focus,
+label::after {
+    border-color: #07c83e;
+}
+.name {
+    color: #09805c;
+    top: 0.5em;
+    &::before,
+    &::after {
+        border-color: rgba( #09805c, 0.3);
+        top: 0;
+    }
+}
+.email {
+    color: #07c83e;
+    top: 3.85em;
+    &::before,
+    &::after {
+        border-color: rgba(#07c83e, 0.3);
+        top: 0;
+    }
+}
+#m {
+    height: 8em;
+}
+.message {
+    color: #575b8e;
+    top: 7.25em;
+    &::before,
+    &::after {
+        height: 8em;
+    }
+}
+.button {
+    color: #e9165d;
+    border: 1px solid;
+    position: relative;
+    transition: 0.3s;
+    &:hover {
+        background: rgba( #e9165d;
+        , 0.2);
+    }
+}
+@media (min-width: 660px) and (max-width: 856px) {
+    body {
+        max-width: calc(100% - 12em);
+    }
 }
 .iconic {
     width: 100px;
