--- a/css/app.css
+++ b/css/app.css
@@ -340,7 +340,6 @@ hr#thread3 {
     width: 100%;
     background-color: snow;
 }
-.port,
 .skillset {
     color: #e67e22;
     text-transform: uppercase;
@@ -350,17 +349,10 @@ hr#thread3 {
     padding-bottom: 2%;
     font-family: 'Teko', sans-serif;
 }
-img {
-    width: 300px;
-    height: 210px;
+#foto {
+    width: 100%;
+    height: 5px;
 }
-
-/*
-.thumbnail {
-    border: 8px solid grey;
-}
-*/
-
 
 /* row four containing blog post and stuff*/
 
@@ -417,166 +409,8 @@ img {
     width: 100px;
 }
 
-/******************
-.inform {
-    font-size: 20px;
-    padding-top: 2%;
-    text-transform: uppercase;
-    color: snow;
-    font-family: 'Teko', sans-serif;
-    text-align: center;
-*******/
+/*portfolio*/
 
-
-}
-.formcont {
-    margin-top: 10%;
-    width: 100%;
-    background: #181b31;
-    color: #fff;
-    font: 300 1.25em "Open Sans", sans-serif;
-    margin: 0 1em;
-    max-width: calc(100% - 7em);
-    padding: 2em calc(50% - 16em);
-}
-h2 {
-    margin: 0 0 0.25em;
-    font-size: 2em;
-    font-weight: 300;
-}
-form {
-    position: relative;
-}
-textarea {
-    resize: none;
-}
-input,
-textarea {
-    background: transparent;
-    border: 0;
-    box-sizing: border-box;
-    color: inherit;
-    margin: 0.5em 0;
-    padding: 0.5em;
-    width: 100%;
-    &:focus {
-        outline: 0;
-    }
-}
-label {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    &::before,
-    &::after {
-        border-width: 1px;
-        border-style: solid;
-        content: ' ';
-        pointer-events: none;
-        position: absolute;
-        transition: 0.75s;
-        width: 5%;
-        height: 2.25em;
-        z-index: 1;
-    }
-    &::before {
-        border-right: 0;
-    }
-    &::after {
-        border-left: 0;
-        right: 0;
-    }
-}
-.label-text {
-    background: #181b31;
-    display: block;
-    padding: 0.5em 1em;
-    position: absolute;
-    right: 0;
-    transition: 1s;
-    &::after {
-        border-top: 1px solid;
-        content: ' ';
-        display: block;
-        transition: 1s;
-    }
-}
-input:focus,
-textarea:focus {
-    & + label::before,
-    & + label::after {
-        width: 50%;
-    }
-    & + label .label-text {
-        transform: translate3d(100%, 0, 0);
-    }
-    & + label .label-text::after {
-        transform: translate3d(-100%, -0.75em, 0);
-        width: 1em;
-    }
-}
-#n {
-    color: #09805c;
-}
-#e {
-    color: #07c83e;
-}
-#n:focus,
-label::before,
-#n:focus,
-label::after {
-    border-color: #09805c;
-}
-#e:focus,
-label::before,
-#e:focus,
-label::after {
-    border-color: #07c83e;
-}
-.name {
-    color: #09805c;
-    top: 0.5em;
-    &::before,
-    &::after {
-        border-color: rgba( #09805c, 0.3);
-        top: 0;
-    }
-}
-.email {
-    color: #07c83e;
-    top: 3.85em;
-    &::before,
-    &::after {
-        border-color: rgba(#07c83e, 0.3);
-        top: 0;
-    }
-}
-#m {
-    height: 8em;
-}
-.message {
-    color: #575b8e;
-    top: 7.25em;
-    &::before,
-    &::after {
-        height: 8em;
-    }
-}
-.button {
-    color: #e9165d;
-    border: 1px solid;
-    position: relative;
-    transition: 0.3s;
-    &:hover {
-        background: rgba( #e9165d;
-        , 0.2);
-    }
-}
-@media (min-width: 660px) and (max-width: 856px) {
-    body {
-        max-width: calc(100% - 12em);
-    }
-}
 .iconic {
     width: 100px;
     height: 100px;
@@ -584,17 +418,7 @@ label::after {
 }
 
 /*row form */
-.formset h2 {
-    text-transform: uppercase;
-    color: #e67e22;
-    font-family: 'Teko', sans-serif;
-}
-.formset {
-    background-color: gray;
-    border-radius: 20px;
-    margin-top: 20px;
-    padding-top: 2%;
-}
+
 .footer {
     width: 100%;
     height: 100px;
@@ -612,6 +436,7 @@ label::after {
 }
 
 /***Blog page css stars  here ****/
+
 .blog1 {
     height: 250px;
     width: 100%;
@@ -639,6 +464,7 @@ label::after {
 
 /*****second row with
 heading of blog post******/
+
 .black {
     font-size: 300%;
     padding-left: 22%;
@@ -657,6 +483,7 @@ heading of blog post******/
 
 /*****third row with
 heading of blog post******/
+
 .blog3 {
     width: 100%;
     height: 700px;
