--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Bree+Serif);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 body,
 html,
 .container {
@@ -479,9 +481,56 @@ heading of blog post******/
     height: 220px;
     background-color: aliceblue;
 }
+
+/*forms formatting */
+
 .forms {
     width: 100%;
     height: 600px;
+}
+.contact-me {
+    text-transform: uppercase;
+    padding-top: 7%;
+    font-size: 2em;
+    color: #e67e22;
+    font-family: 'Teko', sans-serif;
+    text-align: center;
+}
+#contact {
+    overflow: auto;
+}
+#contact #form {
+    width: 410px;
+    float: left;
+}
+#contact #form span {
+    display: block;
+    float: left;
+    width: 100px;
+    padding-top: 5px;
+    font: 14px/16px'Bree Serif', Georgia, serif;
+}
+#contact #form input {
+    float: left;
+    width: 255px;
+    border: 0px;
+    color: #F1F1F1;
+    padding: 10px 10px 10px 30px;
+    font: 11px/20px'Open Sans', Verdana, Helvetica, sans-serif;
+    margin-bottom: 10px;
+}
+#contact #form textarea {
+    float: left;
+    border: 0px;
+    width: 255px;
+    height: 140px;
+    padding: 10px 10px 10px 30px;
+    font: 11px/20px'Open Sans', Verdana, Helvetica, sans-serif;
+    color: #F1F1F1;
+    resize: none;
+}
+#contact #form input.name {
+    background: #222222 url(http://img7.uploadhouse.com/fileuploads/17737/177370145f09fe433945815665aa214f80dbc6af.png) no-repeat 10px 8px;
 }
 .poster {
     height: 220px;
