--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,8 @@ html,
 .container {
     width: 100%;
 }
+
+/*
 .overlay {
     position: absolute;
     top: 20%;
@@ -17,6 +19,8 @@ html,
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.75);
 }
+*/
+
 .fixed_bg {
     min-height: 100%;
     background-size: cover;
@@ -113,7 +117,14 @@ in header*********/
 }
 span {
     color: whitesmoke;
-    font-size: .7em;
+    font-size: 1.7em;
+    color: whitesmoke;
+    font: bold;
+    letter-spacing: -1px;
+    background: rgb(0, 0, 0);
+    /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px;
 }
 
 /*hr css animation */
@@ -423,7 +434,7 @@ hr#thread3 {
 
 .footer {
     width: 100%;
-    height: 200px;
+    height: 300px;
     opacity: 0.9;
     background-color: #292929;
     background-repeat: repeat;
@@ -486,12 +497,12 @@ heading of blog post******/
 
 .forms {
     width: 100%;
-    height: 600px;
+    height: 550px;
 }
 .contact-me {
     text-transform: uppercase;
     padding-top: 7%;
-    font-size: 2em;
+    font-size: 2.4em;
     color: #e67e22;
     font-family: 'Teko', sans-serif;
     text-align: center;
@@ -501,18 +512,19 @@ heading of blog post******/
 }
 #contact #form {
     width: 410px;
-    float: left;
 }
 #contact #form span {
     display: block;
+    font-size: 2.5em;
     float: left;
+    color: black;
     width: 100px;
     padding-top: 5px;
     font: 14px/16px'Bree Serif', Georgia, serif;
 }
 #contact #form input {
     float: left;
-    width: 255px;
+    width: 300px;
     border: 0px;
     color: #F1F1F1;
     padding: 10px 10px 10px 30px;
@@ -522,15 +534,28 @@ heading of blog post******/
 #contact #form textarea {
     float: left;
     border: 0px;
-    width: 255px;
+    width: 300px;
     height: 140px;
     padding: 10px 10px 10px 30px;
     font: 11px/20px'Open Sans', Verdana, Helvetica, sans-serif;
     color: #F1F1F1;
     resize: none;
 }
-#contact #form input.name {
-    background: #222222 url(http://img7.uploadhouse.com/fileuploads/17737/177370145f09fe433945815665aa214f80dbc6af.png) no-repeat 10px 8px;
+#contact #form input.name,
+#contact #form input.email,
+#contact #form textarea.message {
+    background: #222222 no-repeat 10px 8px;
+}
+#contact #form input.submit {
+    cursor: pointer;
+    width: 85px;
+    height: 30px;
+    float: right;
+    padding: 0px 0px 5px 0px;
+    margin: 10px 16px 0px 0px;
+    background: #222222;
+    color: #F1F1F1;
+    font: 14px/16px'Bree Serif', Georgia, serif;
 }
 .poster {
     height: 220px;
