--- a/css/app.css
+++ b/css/app.css
@@ -41,55 +41,107 @@ html,
 .scroll-bg {
     min-height: 80%;
 }
-/*menu styling */
 
+/*menu styling */
 
 .menu {
-    position:
-	line-height: 1;
-	margin: 0 auto;
+    position: relative;
+    line-height: 1;
+    z-index: 5;
+    margin: 0 auto;
 }
-
 .menu__list {
-	position: relative;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin: 0;
-	padding: 0;
-	list-style: none;
+    position: relative;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
-
 .menu__item {
-	display: block;
-	margin: 5em 0;
+    display: block;
+    margin: 5em 0;
 }
-
 .menu__link {
-	font-size: 1.05em;
-	font-weight: bold;
-	display: block;
-	padding: 1em;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-touch-callout: none;
-	-khtml-user-select: none;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    font-size: 1.05em;
+    font-weight: bold;
+    display: block;
+    padding: 1em;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
 .menu__link:hover,
 .menu__link:focus {
-	outline: none;
+    outline: none;
 }
+.menu--sebastian .menu__link {
+    position: relative;
+    display: block;
+    margin: 0 1em;
+    text-align: center;
+    color: #929292;
+    -webkit-transition: color 0.4s;
+    transition: color 0.4s;
+}
+.menu--sebastian .menu__link:hover,
+.menu--sebastian .menu__link:focus {
+    color: #fff;
+}
+.menu--sebastian .menu__item--current .menu__link {
+    color: #d94f5c;
+}
+.menu--sebastian .menu__link::before,
+.menu--sebastian .menu__link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #d94f5c;
+    -webkit-transform: scale3d(0, 1, 1);
+    transform: scale3d(0, 1, 1);
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+}
+.menu--sebastian .menu__link::before {
+    top: 0;
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+}
+.menu--sebastian .menu__link::after {
+    bottom: 0;
+    -webkit-transform-origin: 100% 50%;
+    transform-origin: 100% 50%;
+}
+.menu--sebastian .menu__item--current .menu__link::before,
+.menu--sebastian .menu__item--current .menu__link::after {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    -webkit-transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+    transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+
 /*menu styling */
 
+.navigation-menu {
+    width: 100%;
+    height: 200px;
+}
 .navbar {
     width: 100%;
 }
+
+/*****
 #header {
     background: #333;
     width: 100%;
@@ -99,6 +151,10 @@ html,
     height: 50px;
     border-bottom: #252525 2px solid;
 }
+*/
+
+
+/*******
 a {
     text-align: left;
     text-decoration: none;
@@ -111,6 +167,10 @@ a {
     font-size: 0.8em;
     font-weight: 700;
 }
+*/
+
+
+/*
 #nav ul {
     margin: 0;
     padding: 0;
@@ -139,6 +199,8 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+*/
+
 
 /*********
 ******Background image
