--- a/css/app.css
+++ b/css/app.css
@@ -712,23 +712,17 @@ section:hover .icon > i {
         opacity: .75;
     }
 }
-.study1 {
-    background-image: url('http://www.livingfengshui.ca/wp-content/uploads/2014/01/unsplash-contemplative.jpg');
-}
+.study1 {}
 .study2 {
-    background-image: url('http://imgs.abduzeedo.com/files/paul0v2/unsplash/unsplash-04.jpg');
+    background-image:
 }
 .study3 {
-    background-image: url('http://415vince.com/wp-content/uploads/2014/07/unsplash-mts.jpg');
+    background-image:
 }
 .study4 {
-    background-image: url('http://41.media.tumblr.com/8d41610b4f5e7d5b68e4430b736fbeb3/tumblr_n4vbj2Vv8h1st5lhmo1_1280.jpg');
+    background-image:
 }
-.study5 {
-    background-image: url('http://publicdomainarchive.com/wp-content/uploads/2014/06/public-domain-images-free-stock-photos-high-quality-resolution-downloads-unsplash0067-1000x666.jpg');
-}
-.study6 {
-    background-image: url('http://www.bedlammag.com/wp-content/uploads/2014/04/unsplash-love-yourself-article-e1397699812178.jpg');
-}
+.study5 {}
+.study6 {}
 
 /*    THE FOURTH ROW WITH PORTFOLIO*/
