--- a/css/app.css
+++ b/css/app.css
@@ -6,13 +6,60 @@
         width: 1300px;
         height: auto;
     }
+    /* The nav bar */
+    
+    .nav {
+        width: 100%;
+        height: 120px;
+        background: #2C3E50;
+    }
+    
+    ul {
+        text-align: left;
+        display: inline;
+        margin: 0;
+        padding: 5% 0% 1% 10%;
+        list-style: none;
+    }
+    
+    .name {
+        padding-right: 20%;
+    }
+    
+    ul li {
+        font: bold 120% sans-serif;
+        display: inline-block;
+        margin-right: -2%;
+        position: relative;
+        padding: 4% 4%;
+        /*background: #2C3E50;*/
+        cursor: pointer;
+        -webkit-transition: all 0.2s;
+        -moz-transition: all 0.2s;
+        -ms-transition: all 0.2s;
+        -o-transition: all 0.2s;
+        transition: all 0.2s;
+        color: #fff;
+    }
+    
+    li.li-no-hover:hover {
+        background-color: transparent;
+    }
+    
+    ul li:hover {
+        background: #1abc9c;
+        color: #fff;
+        height: 120px;
+    }
+    /*End Navbar*/
+    
     .fullwidth {
-   width: 100%;
-   height: 100%;
-   margin-left: auto;
-   margin-right: auto;
-   max-width: initial;
-}
+        width: 100%;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: initial;
+    }
     /*The menu positioning*/
     
     .bg-img {
@@ -87,9 +134,6 @@
     }
     /********
 ******888The End Menu*/
-    
-   
-
     /*second row About me */
     
     .two {
@@ -104,6 +148,10 @@
         background-attachment: fixed;
         background-size: cover;
         background-repeat: no-repeat;
+    }
+    
+    .shadow {
+        text-shadow: 0 -3px 0 #333, 0 6px 8px rgba(0, 0, 0, .4), 0 9px 10px rgba(0, 0, 0, .15), 0 30px 10px rgba(0, 0, 0, .18), 0 15px 10px rgba(0, 0, 0, .21);
     }
     
     #box {
